--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -98,7 +98,7 @@
         <!-- email -->
         <div style="margin-top: 10px;" class="fb col-md-12">
             <div class="t_fb" style="width: 60%;border: rgb(170, 170, 170) 2px solid;height: auto; border-radius: 50px;margin: 0 auto;padding: 5px;min-width: 240px;background-color: rgb(235, 235, 235);max-width: 290px;">
-                <a href="https://www.instagram.com/phong_tb_np/">
+                <a href="#">
                     <div class="img_fb">
                         <img style="height: 100%;float: right;margin-right: 10px;" src="tn/gmail.png">
                     </div>
@@ -112,7 +112,7 @@
         </div>
         <div style="margin-top: 10px;" class="fb col-md-12">
             <div class="t_fb" style="width: 60%;border: rgb(170, 170, 170) 2px solid;height: auto; border-radius: 50px;margin: 0 auto;padding: 5px;min-width: 240px;background-color: rgb(235, 235, 235);max-width: 290px;">
-                <a href="https://www.instagram.com/phong_tb_np/">
+                <a href="#">
                     <div class="img_fb">
                         <img style="height: 100%;float: right;margin-right: 10px;" src="tn/gmail.png">
                     </div>
@@ -126,7 +126,7 @@
         </div>
         <div style="margin-top: 10px;" class="fb col-md-12">
             <div class="t_fb" style="width: 60%;border: rgb(170, 170, 170) 2px solid;height: auto; border-radius: 50px;margin: 0 auto;padding: 5px;min-width: 240px;background-color: rgb(235, 235, 235);max-width: 290px;">
-                <a href="https://www.instagram.com/phong_tb_np/">
+                <a href="#">
                     <div class="img_fb">
                         <img style="height: 100%;float: right;margin-right: 10px;" src="tn/dt.png">
                     </div>
