--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,9 +15,9 @@
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 
-<body>
+<body >
     <!-- css -->
-    <style>
+    <style style="background-color: rgb(34, 34, 34);">
         a {
             text-decoration: none;
         }
@@ -59,7 +59,7 @@
 
     </script>
     <!-- code chính -->
-    <div class="container row" style="background-color: rgb(255, 255, 255);">
+    <div class="container row" style="background-color: rgb(34, 34, 34);">
         <div class="col-md-12">
             <div class="img_c"><img style="width: 100%;" src="tn/avatar_logo.png"></div>
             <div class="text_c">
