--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,9 +15,9 @@
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 
-<body >
+<body style="background-color: rgb(34, 34, 34);">
     <!-- css -->
-    <style style="background-color: rgb(34, 34, 34);">
+    <style >
         a {
             text-decoration: none;
         }
