--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -62,7 +62,7 @@
     <div class="container row" style="background-color: rgb(34, 34, 34);">
         <div class="col-md-12">
             <div class="img_c"><img style="width: 100%;" src="tn/avatar_logo.png"></div>
-            <div class="text_c">
+            <div style="color: white" class="text_c">
                 Đỗ Sỹ Phong
             </div>
         </div>
