--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -85,7 +85,7 @@
             <div class="t_fb" style="width: 60%;border: rgb(170, 170, 170) 2px solid;height: auto; border-radius: 50px;margin: 0 auto;padding: 5px;min-width: 240px;background-color: rgb(235, 235, 235);max-width: 290px;">
                 <a href="https://www.instagram.com/phong_tb_np/">
                     <div class="img_fb">
-                        <img style="height: 100%;float: right;margin-right: 10px;" src="tn/Instagram-Icon.png">
+                        <img style="height: 100%;float: right;margin-right: 10px;" src="tn/inta.png">
                     </div>
                     <div class="text_fb">
                         <h4 style="float: left;width: 100%;font-size: 14px;height: 35px;margin-top: 8px;text-align: center;">phong_tb_np
@@ -128,7 +128,7 @@
             <div class="t_fb" style="width: 60%;border: rgb(170, 170, 170) 2px solid;height: auto; border-radius: 50px;margin: 0 auto;padding: 5px;min-width: 240px;background-color: rgb(235, 235, 235);max-width: 290px;">
                 <a href="#">
                     <div class="img_fb">
-                        <img style="height: 100%;float: right;margin-right: 10px;" src="tn/dt.png">
+                        <img style="height: 100%;float: right;margin-right: 10px;" src="tn/phone.png">
                     </div>
                     <div class="text_fb">
                         <h4 style="float: left;width: 100%;font-size: 14px;height: 35px;margin-top: 8px;text-align: center;">0368778660
@@ -138,48 +138,20 @@
                 <div style="clear: both;"></div>
             </div>
         </div>
-        
-        <!-- <div class="instagram col-md-12">
-            <a href="https://www.instagram.com/phong_tb_np/">
-                <div>
-                    <img style="width: 100%;" src="tn/fb.png">
-                </div>
-                <div>
-                    phong_tb_np (Đỗ Sỹ Phong)
-                </div>
-            </a>
+        <div style="margin-top: 10px;" class="fb col-md-12">
+            <div class="t_fb" style="width: 60%;border: rgb(170, 170, 170) 2px solid;height: auto; border-radius: 50px;margin: 0 auto;padding: 5px;min-width: 240px;background-color: rgb(235, 235, 235);max-width: 290px;">
+                <a href="https://www.youtube.com/channel/UCewGulthj4EfSs_thxwTmfA">
+                    <div class="img_fb">
+                        <img style="height: 100%;float: right;margin-right: 10px;" src="tn/youtobe.png">
+                    </div>
+                    <div class="text_fb">
+                        <h4 style="float: left;width: 100%;font-size: 14px;height: 35px;margin-top: 8px;text-align: center;">Lạc Music
+                        </h4>
+                    </div>
+                </a>
+                <div style="clear: both;"></div>
+            </div>
         </div>
-        <div class="email1 col-md-12">
-            <a href="#">
-                <div>
-                    <img style="width: 100%;" src="tn/gmail.png">
-                </div>
-                <div>
-                    syphongabc@gmail.com
-                </div>
-            </a>
-        </div>
-        <div class="email2 col-md-12">
-            <a href="#">
-                <div>
-                    <img style="width: 100%;" src="tn/gmail.png">
-                </div>
-                <div>
-                    phongdsph11135@fpt.edu.vn
-                </div>
-            </a>
-        </div>
-        <div class="sdt col-md-12">
-            <a href="#">
-                <div>
-                    <img style="width: 100%;" src="tn/fb.png">
-                </div>
-                <div>
-                    0368778660 - 0364960587
-                </div>
-            </a>
-        </div>
-    </div> -->
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
